# bupivacain_calculator

./: .gitignore  DataBase.py  IMT.py  Menu.py  Patient.py  RiskFactor.py  bot_main.py  bupik_data.py  bupivacain.py  bupivacaine_calculator.py  calk_bup.py  data.py  database_filler.py  fetofactor.py  input_patient.py  patient.py  program.py  programm.py  pyproject.toml  refactor.py  round_of_PocT.py
dialog/: drag.py  drag_dosage.xlsx  function.py  getters.py  kbs.py  selected.py  start_handler.py  states.py  variants_with_id.py  windows.py
patients/: patients.csv  patients2.csv
program_logic/: DataBase.py  Menu.py  Patient.py  RiskFactor.py  train.py
