[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
